     were added that now generate the data structures and are completely
     contained in the run-time library and allowing for future expansion

 *** anything may still change during development of this version,
     including incompatible changes ***

 *** some of the 3.2 features listed in this file are not merged yet,
     should be soon ***


* New GnuCOBOL features
** Initial support for Java interoperability through JNI (new optional dependency JDK)
** file handling: added backends for ODBC (so far PostgrSQL, MySQL, SQLite,
   MSSQL) and OCI, along with new directory COB_SCHEMA_DIR containing the
   necessary internal schema files to match the file definition to the
   database table

** Added support for V-ISAM which is a rewrite of VB-ISAM but V-ISAM supports
   both C-ISAM and VB-ISAM format files at run time. No need to pre-configure
   which file format is to be used. In fact both file formats may be used
   in the same application program for different INDEXED data files.

** build-system: it is now possible to build GnuCOBOL with multiple handlers
   for ORGANIZATION INDEXED, for example --with-visam --with-db --with-odbc
   and then define at runtime which handler to use, the default is set with
   --with-indexed=<handler>; if no handler is requested the system checks for
   available handlers and use the first applicable - or none, which removes
   the need to specify --without-db

** new experimental file handler LMDB (is slow compared to all others)

** delay-load of libraries (so far for ORGANIZATION INDEXED, planned: XML,
   JSON, SCREENIO)

** option for guaranteed storage of level 01/77 items in memory and
   their alignment (defaults to "fast C")

* runtime checks: previously conditions missed the generation of runtime checks,
  leading to possible out-of-bounds or null-access there, this was fixed

* The old OpenCOBOL EXTFH interface built in via --with-seqra-extfh 
*     and --with-index-extfh is obsolete and will be removed in the